test/typeerrors/ex5.golden
Building file ../test/typeerrors/ex5.act
  Compiling ex5.act for release

ERROR: Error when compiling ex5 module: Type error

  |
1 |def f(x,y):
  |        ^
Keyword element 'y' is not found

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

